@startuml
 skinparam backgroundColor #ffffff
 skinparam classAttributeIconSize 0
 hide circle

 abstract class "{abstract}\nCommand" {
     + {abstract} execute(Model) : CommandResult
 }

 interface Model <<interface>> {
 }

 class ModelManager implements Model{
 }

 class EmailCommand {
     /' Fields '/

     /' Methods '/
     + execute(Model) : CommandResult
 }

 class MainWindow {

    + handleExit()
 }


EmailCommand <-- MainWindow
ModelManager <-- EmailCommand
"{abstract}\nCommand" <|-- EmailCommand

 @enduml
